Fix No employees out of box span.

--- a/src/css/Employee.css
+++ b/src/css/Employee.css
@@ -9,15 +9,16 @@
   margin: 15px;
   padding-bottom: 5px;
   position: relative;
+  min-width:50px;
 }
 
 .Employee span {
   position: absolute;
   opacity: 0;
-  width:100px;
+  width:80px;
   transition: all 1s;
-  left:calc(50% - px);
-  font-size:12px;
+  left:calc(50% - 35px);
+  font-size:11px;
   border: 0px;
   background: none;
   color: #7599c2;
